--- a/style.css
+++ b/style.css
@@ -268,6 +268,31 @@ th {
 }
 
 /*--------------------------------------------------------------
+# homepage
+--------------------------------------------------------------*/
+.products h2 {
+	font-size: 30px;
+	color: #8BDCF4;
+}
+
+.cakes-page {
+	float: left;
+	padding: 4em;
+}
+.cupcakes {
+	float: left;
+	padding: 4em;
+}
+
+.contact {
+	float: left;
+	padding: 4em;
+}
+
+.main-content {
+  h1: url('images/ssweets.png');
+}
+/*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
 body,
